tests/spec/type_errors/shadowing_ok.fable
// SPEC 5: shadowing is allowed — `let x = 1; let x = x + 1;` — including
// re-binding with a different type, inside nested blocks, and in fn bodies.
// The outer binding is untouched and visible again after the block.
let x = 1;
let x = x + 1;
println(x);               //? expect: 2
let mut y = 10;
{
    let y = "shadow";     // inner shadow with a different type
    println(y);           //? expect: shadow
}
println(y);               //? expect: 10
fn double_plus(n: Int) -> Int {
    let n = n * 2;        // parameters can be shadowed too
    let n = n + 1;
    n
}
println(double_plus(5));  //? expect: 11
let s = "outer";
if true {
    let s = 99;
    println(s);           //? expect: 99
}
println(s);               //? expect: outer
